--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -36,7 +36,7 @@
 			<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 				{% if app.user %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Mon compte</a>
+                        <a class="nav-link" href="{{ path('profile_orders') }}">Mon compte</a>
                     </li>
 					<li class="nav-item">
 						<a class="nav-link" href="{{ path('cart') }}">Mon panier</a>
