--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<div class="container-fluid">
-		<a class="navbar-brand" href="{{ path('main') }}">e-commerce</a>
+	<div class="container">
+		<a class="navbar-brand" href="{{ path('main') }}">EuroPlant</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -9,41 +9,30 @@
 				<li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="{{ path('main') }}">Accueil</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Link</a>
-				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-						Dropdown
-					</a>
-					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<li>
-							<a class="dropdown-item" href="#">Action</a>
-						</li>
-						<li>
-							<a class="dropdown-item" href="#">Another action</a>
-						</li>
-						<li><hr class="dropdown-divider"></li>
-						<li>
-							<a class="dropdown-item" href="#">Something else here</a>
-						</li>
-					</ul>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link disabled">Disabled</a>
-				</li>
 			</ul>
 			<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 				{% if app.user %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('profile_orders') }}">Mon compte</a>
-                    </li>
-					<li class="nav-item">
-						<a class="nav-link" href="{{ path('cart') }}">Mon panier</a>
-					</li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_logout') }}">Me déconnecter</a>
-                    </li>
+					{% if app.user.roles[0] == "ROLE_ADMIN" %}
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('admin_catalogues') }}">Gérer les catalogues</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('admin_commandes') }}">Commandes</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_logout') }}">Me déconnecter</a>
+						</li>
+					{% else  %}
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('profile_orders') }}">Mon compte</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('cart') }}">Mon panier</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_logout') }}">Me déconnecter</a>
+						</li>
+					{% endif  %}
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_register') }}">M'inscrire</a>
