--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,16 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <main class="container">
+    <main class="container mb-5">
         <section class="row">
-            <div class="col-12">
+            <div class="col-12 my-4">
                 <h1>Site e-commerce</h1>
                 <p>Bienvenue dans notre boutique</p>            
             </div>
             {% if app.user %}
             {% for category in categories %}
-                    <div class="col-4">
-                        <div class="card h-100">
+                    <div class="col-4 my-2">
+                        <div class="card h-100 bg-light">
                             <div class="card-body">
                                 <h3 class="card-title">{{ category.name }}</h3>
                                 <a href="{{ path('categories_list', {slug: category.slug}) }}" class="btn btn-primary">Voir les produits</a>
