--- a/templates/products/details.html.twig
+++ b/templates/products/details.html.twig
@@ -3,25 +3,35 @@
 {% block title %}Détails de {{ product.name }}{% endblock %}
 
 {% block body %}
-    <div class="col-md-8">
-        <h1 class="mt-4 mt-md-0">{{ product.name }}</h1>
-        <h2>{{ product.price }} €</h2>
-        <hr>
-        <b>Description: </b>{{ product.description }}
-        {{ form_start(form, {'attr': {'class': 'mt-4 p-4 bg-light'}}) }}
-        <div class="form-group">
-            {{ form_label(form.quantity) }}
-            {{ form_widget(form.quantity, {
-                'attr': {
-                    'class': 'form-control ' ~ (form.quantity.vars.valid ? '' : 'is-invalid')
-                }
-            }) }}
-            <div class="invalid-feedback">
-                {{ form_errors(form.quantity) }}
+    <main class="container my-5">
+        <div class="row">
+            <div class="col-md-6">
+                <img class="img-fluid" src="{{ "https" in product.image ? product.image : asset('uploads/images/' ~ product.image) }}"/>
+            </div>
+            <div class="col-md-6">
+                <h1 class="mt-4 mt-md-0">{{ product.name }}</h1>
+                <h2>{{ product.price }} €</h2>
+                <hr>
+                <b>Description: </b>{{ product.description }}
+                {{ form_start(form, {'attr': {'class': 'mt-4 p-4 bg-light'}}) }}
+                <div class="form-group">
+                    {{ form_label(form.quantity) }}
+                    {{ form_widget(form.quantity, {
+                        'attr': {
+                            'class': 'form-control ' ~ (form.quantity.vars.valid ? '' : 'is-invalid'),
+                            'value' : '1'
+                        }
+                    }) }}
+                    <div class="invalid-feedback">
+                        {{ form_errors(form.quantity) }}
+                    </div>
+                </div>
+                {{ form_widget(form.add, {'attr': {'class': 'btn btn-primary w-40 mt-3'}}) }}
+                {{ form_end(form) }}
             </div>
         </div>
-        {{ form_widget(form.add, {'attr': {'class': 'btn btn-warning w-25'}}) }}
-        {{ form_end(form) }}
-    </div>
+    </main>
+
+
 {% endblock %}
 
