--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Inscription{% endblock %}
 
 {% block body %}
-    <section class="container">
+    <section class="container mb-5">
         <div class="row">
             <div class="col">
                 <h1>Inscription</h1>
